--- a/branches.html
+++ b/branches.html
@@ -88,7 +88,7 @@
 					</div><!-- navbar-header ends here -->
 					<div class="collapse navbar-collapse" id="collapse">
 						<ul class="nav navbar-nav navbar-left">
-							<li><a href="index1.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="aboutus.html">About us</a></li>
 							<li><a href="gallery.html">Gallery</a></li>
 							<li class="dropdown">
@@ -249,7 +249,7 @@
 							<div class="panel-body">
 								<div class="row">
 									<div class="col-sm-4">
-										<a href="index1.html" class="sitemap-title"><span class="fa fa-caret-right caret-padding"></span> Home</a>
+										<a href="index.html" class="sitemap-title"><span class="fa fa-caret-right caret-padding"></span> Home</a>
 										<a href="faq.html" class="sitemap-title"><span class="fa fa-caret-right caret-padding"></span> FAQs</a>
 										<a href="gallery.html" class="sitemap-title"><span class="fa fa-caret-right caret-padding"></span> Gallery</a>
 										<a href="services.html" class="sitemap-title"><span class="fa fa-caret-right caret-padding"></span> Services</a>
